alignmnet issues

--- a/custom-scale/src/app/components/scale-input/scale-input.component.css
+++ b/custom-scale/src/app/components/scale-input/scale-input.component.css
@@ -28,9 +28,12 @@ button:disabled {
     display: flex;
     justify-content: center;
     right: 45%;
-    
-
 }
+
+.required-label::after {
+    content: "*";
+    color: red;
+  }
 
 .container {
     align-items: center;
